--- a/ECampusConnect-web/src/main/webapp/create_course.html
+++ b/ECampusConnect-web/src/main/webapp/create_course.html
@@ -6,7 +6,7 @@
 <body>
 	<div style="padding-left:100px;font-family: monospace;">
 		<h2>Create Animal</h2>
-		<form action="rest/animals" method="POST">
+		<form action="rest/courses" method="POST">
 			<div style="width: 200px; text-align: left;">
 				<div style="padding:10px;">
 					Animal ID: <input name="id" />
