--- a/ECampusConnect-web/src/main/webapp/create_course.html
+++ b/ECampusConnect-web/src/main/webapp/create_course.html
@@ -9,13 +9,13 @@
 		<form action="rest/courses" method="POST">
 			<div style="width: 200px; text-align: left;">
 				<div style="padding:10px;">
-					Animal ID: <input name="id" />
+					COURSE ID: <input name="id" />
 				</div>
 				<div style="padding:10px;">
-					Animal Name: <input name="animalname" />
+					COURSE Name: <input name="coursename" />
 				</div>
 				<div style="padding:10px;">
-					Animal Type: <input name="animaltype" />
+					COURSE Type: <input name="coursetype" />
 				</div>
 				<div style="padding:10px;text-align:center">
 					<input type="submit" value="Submit" />
