--- a/ECampusConnect-web/src/main/webapp/create_course.html
+++ b/ECampusConnect-web/src/main/webapp/create_course.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Create Animal</title>
+<title>Create Courses</title>
 </head>
 <body>
 	<div style="padding-left:100px;font-family: monospace;">
-		<h2>Create Animal</h2>
+		<h2>Create Courses</h2>
 		<form action="rest/courses" method="POST">
 			<div style="width: 200px; text-align: left;">
 				<div style="padding:10px;">
